improve global feedback display #159